--- a/styles/carousel.css
+++ b/styles/carousel.css
@@ -1,3 +1,6 @@
+/*
+https://codesandbox.io/embed/nextjs-css-only-carousel-ipyij
+*/
 
   .slider {
 	width: 100%;
